fixed image out of bound

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1417,6 +1417,10 @@ hr.survey-hr {
   width: 100%;
   height: 100%; }
 
+.img-max-height-width {
+  max-height: 100%;
+  max-width: 100%; }
+
 .manage-preview {
   padding-top: 1%;
   padding-bottom: 2%; }
