--- a/public/scss/pages/_gallery.scss
+++ b/public/scss/pages/_gallery.scss
@@ -150,3 +150,8 @@
   width: 100%;
   height: 100%;
 }
+
+.img-max-height-width{
+  max-height: 100%;
+  max-width: 100%;
+}
